Change db password

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<h1>MOM|Editor</h1>
   	<input type="button" value="create ATTRIBUTE" id="btn_createAttribute">
   	<ul id="lst_attributes"></ul>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <!-- neo4j Binary Driver -->
   <script src="sources/lib/neo4j-web.min.js"></script>
   <!-- Helper -->
